3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

socket/loop.c: Fix replyinfo, in that it was using incorrect length parameter
  when replying to unsupported requests.
MSW 2006-11-02

Fix for bug #1547517: DM issue with containers
 server/apply.c: move_apply shouldn't exit if opened container.
Ryo 2006-10-29

Implement feature request #1551406: Add player's name to disease symptoms
 server/disease.c: add player's name.
Ryo 2006-10-28

/plugins/cfpython/{cfpython.c, cfpython_map.c, cfpython_object.c}: Remove
   redundent checks in values passed to Crossfire_Foobar_wrap() functions.
Alex Schultz 2006-10-27

Fix for bug #1573381 (death attacks does works on skull)
server/attack.c: check for undead when no slaying set for hitter in deathstrike_player.
Ryo 2006-10-22

Fix for bug #1553636 (Crashbug: reset/swaped map after use of "overlay_save").
Make command coherent with ingame command (command_overlay_save since overlay_save).
Add 'overlay_reset' command to reset a saved overlay.
common/map.c: if flag is 2, map is still valid (non destructive save).
include/sproto.h: rename function, new function.
server/c_wiz.c: no need to save and reload the map for overlay. Rename function. New function.
server/commands.c: rename function, new function.
Ryo 2006-10-22

common/loader.l: Make it so that long msg/endmsg won't overflow temp buffer
  by using safe_strcat.  Will result in long messages being truncated, but
  better than crashes.
server/pets.c: Check for existance of object existance after call to
  follow_owner() in remove_all_pets().  Can be cases where put is killed
  when moving to new map.
MSW 2006-10-18
